--- a/tasks/src/main/resources/application.yml
+++ b/tasks/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
       ddl-auto: update
 server:
   port: 8080
+  error:
+    include-stacktrace: never
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
