--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,38 @@ services:
       POSTGRES_DB: ${TASK_DB_NAME}
     volumes:
       - ./data/db:/var/lib/postgresql/data
+
+  keycloak:
+    container_name: keycloak
+    image: quay.io/keycloak/keycloak:24.0.1
+    command: [ "start-dev", "--import-realm" ]
+    environment:
+      DB_VENDOR: ${KC_DB_VENDOR}
+      DB_ADDR: ${KC_DB_ADDR}
+      DB_URL: ${KC_DB_URL}
+      DB_DATABASE: ${KC_DB_NAME}
+      DB_USER: ${KC_DB_USERNAME}
+      DB_PASSWORD: ${KC_DB_PASSWORD}
+      DB_HOST_NAME: ${KC_HOST_NAME}
+      DB_HOST_PORT: ${KC_HOST_PORT}
+      KEYCLOAK_ADMIN: ${KC_ADMIN_USERNAME}
+      KEYCLOAK_ADMIN_PASSWORD: ${KC_ADMIN_PASSWORD}
+    ports:
+      - "${KC_HOST_PORT}:${KC_CONTAINER_PORT}"
+    volumes:
+      - ./docker/keycloak/realms/:/opt/keycloak/data/import/
+    depends_on:
+      - keycloak-db
+
+  keycloak-db:
+    image: postgres:17
+    container_name: keycloak-db
+    hostname: keycloak-db
+    ports:
+      - ${KEYCLOAK_DB_HOST_PORT}:${KEYCLOAK_DB_CONTAINER_PORT}
+    environment:
+      POSTGRES_USER: ${KEYCLOAK_DB_USER}
+      POSTGRES_PASSWORD: ${KEYCLOAK_DB_PASSWORD}
+      POSTGRES_DB: ${KEYCLOAK_DB_NAME}
+    volumes:
+      - ./data/keycloak-db:/var/lib/postgresql/data
