--- a/tasks/pom.xml
+++ b/tasks/pom.xml
@@ -6,10 +6,10 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.4</version>
+        <version>3.4.3</version>
         <relativePath />
     </parent>
-    <groupId>com.taskScheduller</groupId>
+    <groupId>com.taskscheduller</groupId>
     <artifactId>api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>tasks</name>
