--- a/tasks/pom.xml
+++ b/tasks/pom.xml
@@ -9,7 +9,7 @@
         <version>3.4.3</version>
         <relativePath />
     </parent>
-    <groupId>com.taskscheduller</groupId>
+    <groupId>com.taskscheduler</groupId>
     <artifactId>api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>tasks</name>
