--- a/tasks/pom.xml
+++ b/tasks/pom.xml
@@ -10,13 +10,14 @@
         <relativePath />
     </parent>
     <groupId>com.taskscheduler</groupId>
-    <artifactId>api</artifactId>
+    <artifactId>tasksapi</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>tasks</name>
+    <name>tasksapi</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>21</java.version>
         <spring-cloud.version>2023.0.1</spring-cloud.version>
+        <spring-doc.version>2.8.5</spring-doc.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
         <mapstruct-lombok.version>0.2.0</mapstruct-lombok.version>
     </properties>
@@ -36,12 +37,12 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.5.0</version>
+            <version>${spring-doc.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
-            <version>2.5.0</version>
+            <version>${spring-doc.version}</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
